styles.css
body {
   font-family: Roboto, sans-serif;
   margin: 0;
}

.header {
    display: flex;
    color: white;
    background-color: #1F2937;
    font-weight: bolder;
    font-size: 40px;
    justify-content: space-around;
    align-items: center;
}

ul {
    display: flex;
    padding: 16px;
    margin: 0px;
    list-style: none;
    align-self: flex-end;
    gap: 20px;
    font-size: 30px;
    font-weight: 100;
}

a {
    text-decoration: none;
    color: white;
}

.hero-container {
    background-color: #1F2937;
    display: flex;
    padding-top: 100px;
    justify-content: space-around;
    padding-bottom: 100px;
    align-items: center;
    padding: 80px 220px;
    gap: 70px;
    
}


h2 {
    color: white;
    display: flex;
    font-weight:900px;
    font-size: 48px;
    margin: 0%;
}

.hero-text {
    color: #E5E7EB;
    font-size: 18px;
    padding-top: 5px;
    padding-bottom: 5px;
    
}

.hero-image-placeholder {
    color: white;
    background-color: gray;
    flex: 1;
    text-align: center;
}

.hero-content {
    display: flex;
    flex-basis: 350px;
    flex-wrap: wrap;
    flex: 1;
}

.sign-up {
    background-color: #3882F6;
    color: white;
    border-radius: 10px;
    display: flex;
    padding: 10px 20px;
    font-weight: bold;
}

